--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^5.2.3",
     "moment": "^2.29.4",
+    "mongodb": "^5.0.0",
     "next": "12.2.2",
     "react": "18.2.0",
     "react-big-calendar": "^1.4.2",
