--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.18.1",
+    "axios": "^1.3.4",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.2.3",
+    "formidable": "^2.1.1",
+    "google-map-react": "^2.2.0",
     "moment": "^2.29.4",
     "mongodb": "^5.0.0",
     "next": "12.2.2",
     "react": "18.2.0",
     "react-big-calendar": "^1.4.2",
+    "react-datepicker": "^4.10.0",
     "react-dom": "18.2.0",
     "reactstrap": "^9.1.5",
     "sass": "^1.53.0",
@@ -24,5 +29,10 @@
   "devDependencies": {
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.2"
+  },
+  "browser": {
+    "fs": false,
+    "path": false,
+    "os": false
   }
 }
