--- a/package.json
+++ b/package.json
@@ -9,12 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@react-google-maps/api": "^2.18.1",
     "axios": "^1.3.4",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.2.3",
     "formidable": "^2.1.1",
-    "google-map-react": "^2.2.0",
+    "google-maps-react": "^2.0.6",
     "moment": "^2.29.4",
     "mongodb": "^5.0.0",
     "next": "12.2.2",
