--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "moment": "^2.29.4",
     "mongodb": "^5.0.0",
     "next": "12.2.2",
-    "react": "18.2.0",
+    "react": "^17.0.1",
     "react-big-calendar": "^1.4.2",
     "react-datepicker": "^4.10.0",
-    "react-dom": "18.2.0",
+    "react-dom": "17.0.1",
     "reactstrap": "^9.1.5",
     "sass": "^1.53.0",
     "weather-icons": "^1.3.2"
