--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@watermarkchurch/google-maps-react": "^2.0.7",
+    "@react-google-maps/api": "^2.18.1",
     "axios": "^1.3.4",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.2.3",
