--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "18.2.0",
     "reactstrap": "^9.1.5",
     "sass": "^1.53.0",
+    "sweetalert": "^2.1.2",
     "weather-icons": "^1.3.2"
   },
   "devDependencies": {
