--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.3.4",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.2.3",
+    "firebase": "^9.17.2",
     "formidable": "^2.1.1",
     "moment": "^2.29.4",
     "mongodb": "^5.0.0",
@@ -23,6 +24,7 @@
     "react-dom": "18.2.0",
     "reactstrap": "^9.1.5",
     "sass": "^1.53.0",
+    "stripe": "^11.14.0",
     "sweetalert": "^2.1.2",
     "weather-icons": "^1.3.2"
   },
