--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-google-maps/api": "^2.18.1",
+    "@stripe/stripe-js": "^1.48.0",
     "axios": "^1.3.4",
     "bcryptjs": "^2.4.3",
     "bootstrap": "^5.2.3",
@@ -24,7 +25,6 @@
     "react-dom": "18.2.0",
     "reactstrap": "^9.1.5",
     "sass": "^1.53.0",
-    "stripe": "^11.14.0",
     "sweetalert": "^2.1.2",
     "weather-icons": "^1.3.2"
   },
